# cufo

./: .gitignore  CMakeLists.txt  README.md  main.c
cufo/: cufo.c  cufo.h
cufo/include/: cufo_array.h  cufo_value.h
cufo/src/: cufo_array.c  cufo_value.c
json/: CMakeLists.txt  cufo_json.c  cufo_json.h
json/include/: jsonarray.h  jsonbst.h  jsonhash.h  jsonjson.h  jsonstring.h  jsonvalue.h
json/src/: jsonarray.c  jsonbst.c  jsonhash.c  jsonjson.c  jsonstring.c  jsonvalue.c
reader/: CMakeLists.txt  cufo_reader.c  cufo_reader.h
test_files/: test.json
wave/: CMakeLists.txt  README.md  cufo_wave.c  cufo_wave.h
